--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,6 @@ workflows:
   print-hello-world-workflow:
     jobs:
       - print_hello
-      - print_world
+      - print_world:
           required:
             - print_hello
