--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,21 +27,21 @@ jobs:
       - run:
         name: "Print Hello"
         command: "echo hello"
-  print_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-      - run:
-        name: "Print World"
-        command: "echo world"
+  # print_world:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - checkout
+  #     - run:
+  #       name: "Print World"
+  #       command: "echo world"
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   print-hello-world-workflow:
     jobs:
       - print_hello
-      - print_world
+      # - print_world
       # - print_world:
       #     required:
       #       - print_hello
