--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
     steps:
       - checkout
       - run:
-        name: "Print Hello"
-        command: "echo hello"
+          name: "Print Hello"
+          command: "echo hello"
   # print_world:
   #   docker:
   #     - image: circleci/node:13.8.0
@@ -38,7 +38,7 @@ jobs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  print-hello-world-workflow:
+  hello-world-workflow:
     jobs:
       - print_hello
       # - print_world
