Update wrong syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,5 +43,5 @@ workflows:
       - print_hello
       # - print_world
       - print_world:
-          required:
+          requires:
             - print_hello
