--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,25 +23,18 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - checkout
-      - run:
-          name: "Print Hello"
-          command: "echo hello"
+      - run: "echo hello"
   print_world:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - checkout
-      - run:
-          name: "Print World"
-          command: "echo world"
+      - run: "echo world"
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   hello-world-workflow:
     jobs:
       - print_hello
-      # - print_world
       - print_world:
           requires:
             - print_hello
