Update wrong syntax

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,11 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - run: "echo world"
+  print_pipeline_id:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo "This is pipeline ID in CircleCI << pipeline.id >>"
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
