--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,3 +43,6 @@ workflows:
       - print_world:
           requires:
             - print_hello
+      - print_pipeline_id:
+          requires:
+            - print_world
