--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
     environment:
       USER_NAME: "Jack Vo"
     steps:
-      - run: echo "This is pipeline ID in CircleCI << pipeline.id >>"
+      - run: echo $USER_NAME
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
