--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,40 +19,59 @@ jobs:
   #         command: "echo Hello, World! Jack Vo"
   #         name: "Check kernel version"
   #         command: "uname -msr"
-  print_hello:
+  # print_hello:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - run: "echo hello"
+  # print_world:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - run: "echo world"
+  # print_pipeline_id:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     - run: echo "This is pipeline ID in CircleCI << pipeline.id >>"
+  # print_your_name:
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   environment:
+  #     USER_NAME: "Jack Vo"
+  #   steps:
+  #     - run: echo $USER_NAME
+  save_hello_world_output:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: "echo hello"
-  print_world:
+      - run: echo "Hello world" > output.txt
+      - persist_to_workspace:
+          root: /tmp/workspace
+          paths: output.txt
+  print_output_file:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: "echo world"
-  print_pipeline_id:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo "This is pipeline ID in CircleCI << pipeline.id >>"
-  print_your_name:
-    docker:
-      - image: circleci/node:13.8.0
-    environment:
-      USER_NAME: "Jack Vo"
-    steps:
-      - run: echo $USER_NAME
+      - run: cat output.txt
+      - attach_workspace:
+          at: /tmp/workspace
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   hello-world-workflow:
     jobs:
-      - print_hello
-      - print_world:
-          requires:
-            - print_hello
-      - print_pipeline_id:
-          requires:
-            - print_world
-      - print_your_name:
-          requires:
-            - print_pipeline_id
+      - save_hello_world_output
+      - print_output_file
+  # hello-world-workflow:
+  #   jobs:
+  #     - print_hello
+  #     - print_world:
+  #         requires:
+  #           - print_hello
+  #     - print_pipeline_id:
+  #         requires:
+  #           - print_world
+  #     - print_your_name:
+  #         requires:
+  #           - print_pipeline_id
