--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
     steps:
       - run: echo "Hello world" > output.txt
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: ~/workspace
           paths: output.txt
   print_output_file:
     docker:
@@ -55,7 +55,7 @@ jobs:
     steps:
       - run: cat output.txt
       - attach_workspace:
-          at: /tmp/workspace
+          at: ~/workspace
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
