--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,8 @@ workflows:
     jobs:
       - save_hello_world_output
       - print_output_file
+          requires:
+            - save_hello_world_output
   # hello-world-workflow:
   #   jobs:
   #     - print_hello
