--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ workflows:
   hello-world-workflow:
     jobs:
       - save_hello_world_output
-      - print_output_file
+      - print_output_file:
           requires:
             - save_hello_world_output
   # hello-world-workflow:
