--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
 
       - run:
           name: Upload Failed Tests
-          command: curl --data fail_tests.log http://example.com/error_logs
+          command: echo "Hello Error!"
           when: on_fail
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
